tests updated for building on Java 11+